kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-minikube
spec:
  type: NodePort
  selector:
    app: hello-minikube
  ports:
  - name: http
    port: 80
    targetPort: 80
